# speakify

./: .gitignore  Cargo.toml  README.md  index.html  speakify.sh
docs/: index.html  worker.js
docs/pkg/: README.md  package.json  speakify.d.ts  speakify.js  speakify_bg.wasm  speakify_bg.wasm.d.ts
docs/report/: report_speakify.aux  report_speakify.out  report_speakify.tex  slide_speakify.tex
src/: lib.rs  main.rs  morph.rs  wasm.rs
