[package]
name = "speakify"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
gif = "0.13"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
pathfinding = "4.13"
frand = "0.10"
rayon = "1.10"
indicatif = "0.17"
palette = "0.7"
