[package]
name = "speakify"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "speakify"
path = "src/main.rs"

[dependencies]
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
gif = "0.13"
clap = { version = "4.5", features = ["derive"], optional = true }
anyhow = "1.0"
pathfinding = "4.13"
frand = "0.10"
indicatif = { version = "0.17", optional = true }
palette = "0.7"

# WebAssembly dependencies
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

rayon = { version = "1.10", optional = true }

[features]
default = ["cli"]
cli = ["clap", "indicatif", "rayon"]
